[gd_scene load_steps=3 format=3 uid="uid://rjwhxe3o55s4"]

[ext_resource type="Script" uid="uid://n3nwta6vgb44" path="res://scripts/ui/battle_screen.gd" id="1_yrnt2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrnt2"]
bg_color = Color(0, 0, 0, 0.239216)

[node name="BattleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yrnt2")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 760.0
offset_top = 100.0
offset_right = 1160.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yrnt2")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleNameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Battle Name"

[node name="TimerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Time: 03:00"

[node name="CasualtyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Casualties: 0 / 0"

[node name="CohesionBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BattleProgressBar" type="ProgressBar" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EventLog" type="RichTextLabel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
